syntax = "proto3";

option csharp_namespace = "GRPC.Service.Protos";

import "google/api/annotations.proto";

package authentication;

service IAuthentication {
	rpc Authenticate (AuthenticationRequest) returns (AuthenticationResponse) {
		option(google.api.http) = 
		{
			post: "/authenticateuser",
			body: "*"
		};
	};
}
message AuthenticationRequest {
	string user_name = 1;
	string password = 2;
}
message AuthenticationResponse {
	string access_token = 1;
	int32 expires_in = 2;
}